@@ -1,12 +1,3 @@
-/* $Id: c370.h,v 1.2 1999/11/04 14:02:21 shields Exp $ */
-/*
- This software is subject to the terms of the IBM Jikes Compiler
- License Agreement available at the following URL:
- http://www.ibm.com/research/jikes.
- Copyright (C) 1983, 1999, International Business Machines Corporation
- and others.  All Rights Reserved.
- You must accept the terms of that agreement to use this software.
-*/
 #ifndef C370_INCLUDED
 #define C370_INCLUDED
 
