@@ -1,12 +1,3 @@
-/* $Id: common.h,v 1.4 2001/10/10 14:53:10 ericb Exp $ */
-/*
- This software is subject to the terms of the IBM Jikes Compiler
- License Agreement available at the following URL:
- http://ibm.com/developerworks/opensource/jikes.
- Copyright (C) 1983, 1999, 2001 International Business
- Machines Corporation and others.  All Rights Reserved.
- You must accept the terms of that agreement to use this software.
-*/
 #ifndef COMMON_INCLUDED
 #define COMMON_INCLUDED
 
