@@ -1,12 +1,3 @@
-// $Id: lpgact.h,v 1.3 1999/11/08 23:22:40 shields Exp $
-//
-// This software is subject to the terms of the IBM Jikes Compiler
-// License Agreement available at the following URL:
-// http://www.ibm.com/research/jikes.
-// Copyright (C) 1996, 1998, International Business Machines Corporation
-// and others.  All Rights Reserved.
-// You must accept the terms of that agreement to use this software.
-//
 static void (*rule_action[]) (void) = {NULL,
      null_action, /* 1 */
      null_action, /* 2 */
